--- a/friends.html
+++ b/friends.html
@@ -41,6 +41,38 @@
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar--xl" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Nicolas</h4>
+                    <!-- <h6 class="user-component__subtitle">this is text</h6> -->
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar--sm" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-sm"></i>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
