--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find - KoKoa Clone</title>
+    <title>More - KoKoa Clone</title>
 </head>
 
 <body>
@@ -28,62 +28,54 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
+        <h1 class="screen-header__title">More</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
-            <span class="point__cog"></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar--xl" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Nicolas</h4>
+                    <div class="user-component__subtitle">
+                        <h6 class="user-component__subtitle">+1 787 666 999</h6>
+                        <span class="caution"><i class="fas fa-exclamation-circle"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div class="user-component__column"><i class="far fa-comment-alt fa-2x"></i></div>
+        </div>
         <div class="icon-row">
             <div class="icon-row__icon">
-                <i class="fas fa-qrcode"></i>
-                <span>QR Code</span>
+                <i class="far fa-calendar"></i>
+                <span>Calander</span>
             </div>
             <div class="icon-row__icon">
-                <i class="fas fa-address-book"></i>
-                <span>Add by Contacts</span>
+                <i class="far fa-smile-beam"></i>
+                <span>Emoticons</span>
             </div>
             <div class="icon-row__icon">
-                <i class="fas fa-fingerprint"></i>
-                <span>Add by ID</span>
+                <i class="fas fa-brush"></i>
+                <span>Themes</span>
             </div>
             <div class="icon-row__icon">
-                <i class="far fa-envelope"></i>
-                <span>Invite</span>
+                <i class="fas fa-file-invoice-dollar"></i>
+                <span>Account</span>
             </div>
         </div>
-        <div class="recommended-friends">
-            <h6 class="recommended-friends__title">Recommended Friends</h6>
-            <span>You have no recommended friends.</span>
-        </div>
-        <div class="open-chat">
-            <div class="open-chat__header">
-                <h4 class="open-chat__title">Open Chat</h4>
-                <div class="open-chat__header__description">
-                    <span>Go to Openchat Home</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
-
-            </div>
-            <div class="open-post">
-                <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtags">#bts#army</h6>
-                    <div class="open-post__members">
-                        <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
-                        <span class="open-post__member-count">802 members</span>
-                        <div class="divider"></div>
-                        <span class="open-post__member-status">Active</span>
+        <div class="more-suggestions">
+            <h4 class="more-suggestions__title">Suggestions</h4>
+            <div class="more-suggestions__icons">
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i>
                     </div>
-                </div>
-                <div class="open-post__column">
-                    <div class="open-post__photo">
-                        <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
-                        <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
-                    </div>
+                    <span class="more-suggestions__icon-text">KoKoa Story</span>
                 </div>
             </div>
         </div>
