--- a/chats.html
+++ b/chats.html
@@ -38,21 +38,23 @@
     </header>
 
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
-                    <h6 class="user-component__subtitle">
-                        Please check My Kokoa Account Info
-                    </h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Nicolas</h4>
+                        <h6 class="user-component__subtitle">
+                            Please check My Kokoa Account Info
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <span class="badge">1</span>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <span class="badge">1</span>
-            </div>
-        </div>
+        </a>
     </main>
 
 
@@ -82,6 +84,10 @@
             </li>
         </ul>
     </nav>
+
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
 
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
