Some of things are changed
changed friend and chat html&css

--- a/chats.html
+++ b/chats.html
@@ -13,7 +13,6 @@
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
-            <!-- To Do: Wifi Icon-->
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
@@ -22,13 +21,11 @@
             <span>80%</span>
             <i class="fas fa-battery-three-quarters fa-lg"></i>
             <i class="fas fa-bolt"></i>
-            <!-- Battery Icon-->
-            <!-- Lightning Icon-->
         </div>
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
+        <h1 class="screen-header__title">채팅</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="far fa-comment-dots fa-lg"></i></span>
@@ -38,20 +35,72 @@
     </header>
 
     <main class="main-screen">
-        <a href="chat.html">
-            <div class="user-component">
+        <a href="chat/chat.html">
+            <div class="user-component user-component__chat">
                 <div class="user-component__column">
-                    <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avater user-component__avatar" />
+                    <img src="https://cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/5D6JBSIPEDB7UAC7NH2G3AZJ34.png" class="user-component__avater user-component__avatar" />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Nicolas</h4>
+                        <h4 class="user-component__title">김지웅</h4>
                         <h6 class="user-component__subtitle">
-                            Please check My Kokoa Account Info
+                            야 최웅
                         </h6>
                     </div>
                 </div>
                 <div class="user-component__column">
                     <span class="user-component__time">21:22</span>
                     <span class="badge">1</span>
+                </div>
+            </div>
+        </a>
+        <a href="chat/chat.html">
+            <div class="user-component user-component__chat">
+                <div class="user-component__column">
+                    <img src="https://post-phinf.pstatic.net/MjAyMTEyMjdfMTA5/MDAxNjQwNTg4Njk0NDQ5.jL13xTIj_PBWpFSkXcj68x8tTxc7vtQ0rPcx5Ksx-VEg.pG60SOLqk65omGgiibzNFZkQ1QcPrpuBAttd1yD7VZkg.JPEG/%EC%95%88%EB%8F%99%EA%B5%AC%EC%9D%80%ED%98%B8%E2%99%A5_%281%29.jpg?type=w1200"
+                        class="user-component__avater user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">구은호</h4>
+                        <h6 class="user-component__subtitle">
+                            형...?
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">19:04</span>
+                    <span class="badge">3</span>
+                </div>
+            </div>
+        </a>
+        <a href="chat/chat.html">
+            <div class="user-component user-component__chat">
+                <div class="user-component__column">
+                    <img src="https://static.inews24.com/v1/1f4df6ab17fbf2.jpg" class="user-component__avater user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">국연수</h4>
+                        <h6 class="user-component__subtitle">
+                            야!
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">18:01</span>
+                    <span class="badge">2</span>
+                </div>
+            </div>
+        </a>
+        <a href="chat/chat.html">
+            <div class="user-component user-component__chat">
+                <div class="user-component__column">
+                    <img src="https://blog.kakaocdn.net/dn/diS6w3/btro9G4j2Aq/ZAos9vdH53kS63IUVjnrX1/img.jpg" class="user-component__avater user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">엔제이</h4>
+                        <h6 class="user-component__subtitle">
+                            작가님...?
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">15:42</span>
+                    <span class="badge">4</span>
                 </div>
             </div>
         </a>
