--- a/chat/chat1.html
+++ b/chat/chat1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat w/ Nico - KoKoa Clone</title>
@@ -13,7 +13,6 @@
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
-            <!-- To Do: Wifi Icon-->
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
@@ -22,14 +21,12 @@
             <span>80%</span>
             <i class="fas fa-battery-three-quarters fa-lg"></i>
             <i class="fas fa-bolt"></i>
-            <!-- Battery Icon-->
-            <!-- Lightning Icon-->
         </div>
     </div>
 
     <header class="alt-header">
         <div class="alt-header__column">
-            <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
+            <a href="../chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
         </div>
         <div class="alt-header__column">
             <h1 class="alt-header__title">Nicolas</h1>
