Many things are changed
1. English are translated with Korean
2. Each of the people chat are changed
3. Some of icons are added

--- a/chat/chat1.html
+++ b/chat/chat1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat w/ Nico - KoKoa Clone</title>
+    <title>Chat w/ 김지웅 - KoKoa Clone</title>
 </head>
 
 <body id="chat-screen">
@@ -29,7 +29,7 @@
             <a href="../chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">Nicolas</h1>
+            <h1 class="alt-header__title">김지웅</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
@@ -39,25 +39,16 @@
 
     <main class="main-screen main-chat">
         <div class="chats__timestamp">
-            Tuesday, June 30, 2021
+            화요일, 7월 6일, 2022
         </div>
 
         <div class="message-row">
-            <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
+            <img src="https://cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/5D6JBSIPEDB7UAC7NH2G3AZJ34.png">
             <div class="message-row__content">
-                <span class="message__author">Nicolas</span>
+                <span class="message__author">김지웅</span>
                 <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="message-row message-row--own">
-            <div class="message-row__content">
-                <div class="message__info">
-                    <span class="message__bubble">Hi nice to meet you!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble">야 최웅</span>
+                    <span class="message__time">21:22</span>
                 </div>
             </div>
         </div>
@@ -68,7 +59,7 @@
             <i class="far fa-plus-square fa-lg"></i>
         </div>
         <div class="reply__column">
-            <input type="text" placeholder="Write a message. . .">
+            <input type="text" placeholder="메세지를 입력하세요. . .">
             <i class="far fa-smile-wink fa-lg"></i>
             <button>
                 <i class="fas fa-arrow-up"></i>
@@ -77,7 +68,7 @@
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
