--- a/chat/chat2.html
+++ b/chat/chat2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat w/ Nico - KoKoa Clone</title>
+    <title>Chat w/ 구은호 - KoKoa Clone</title>
 </head>
 
 <body id="chat-screen">
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -29,7 +29,7 @@
             <a href="../chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">Nicolas</h1>
+            <h1 class="alt-header__title">구은호</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
@@ -39,25 +39,32 @@
 
     <main class="main-screen main-chat">
         <div class="chats__timestamp">
-            Tuesday, June 30, 2021
+            화요일, 7월 6일, 2022
         </div>
 
         <div class="message-row">
-            <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
+            <img src="https://post-phinf.pstatic.net/MjAyMTEyMjdfMTA5/MDAxNjQwNTg4Njk0NDQ5.jL13xTIj_PBWpFSkXcj68x8tTxc7vtQ0rPcx5Ksx-VEg.pG60SOLqk65omGgiibzNFZkQ1QcPrpuBAttd1yD7VZkg.JPEG/%EC%95%88%EB%8F%99%EA%B5%AC%EC%9D%80%ED%98%B8%E2%99%A5_%281%29.jpg?type=w1200">
             <div class="message-row__content">
-                <span class="message__author">Nicolas</span>
+                <span class="message__author">구은호</span>
                 <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble">형</span>
+                    <span class="message__time">19:03</span>
                 </div>
             </div>
         </div>
-
-        <div class="message-row message-row--own">
+        <div class="message-row">
             <div class="message-row__content">
                 <div class="message__info">
-                    <span class="message__bubble">Hi nice to meet you!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble no__author">우리 전시회 일정 언제로 잡을까?</span>
+                    <span class="message__time">19:04</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble no__author">형...?</span>
+                    <span class="message__time">19:04</span>
                 </div>
             </div>
         </div>
@@ -77,7 +84,7 @@
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
