--- a/find.html
+++ b/find.html
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -25,7 +25,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
+        <h1 class="screen-header__title">찾기</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
@@ -37,48 +37,48 @@
         <div class="icon-row">
             <div class="icon-row__icon">
                 <i class="fas fa-qrcode"></i>
-                <span>QR Code</span>
+                <span>QR코드</span>
             </div>
             <div class="icon-row__icon">
                 <i class="fas fa-address-book"></i>
-                <span>Add by Contacts</span>
+                <span>연락처로 추가</span>
             </div>
             <div class="icon-row__icon">
                 <i class="fas fa-fingerprint"></i>
-                <span>Add by ID</span>
+                <span>아이디로 추가</span>
             </div>
             <div class="icon-row__icon">
                 <i class="far fa-envelope"></i>
-                <span>Invite</span>
+                <span>초대</span>
             </div>
         </div>
         <div class="recommended-friends">
-            <h6 class="recommended-friends__title">Recommended Friends</h6>
-            <span>You have no recommended friends.</span>
+            <h6 class="recommended-friends__title">추천친구</h6>
+            <span>추천 친구가 없습니다.</span>
         </div>
         <div class="open-chat">
             <div class="open-chat__header">
-                <h4 class="open-chat__title">Open Chat</h4>
+                <h4 class="open-chat__title">오픈채팅</h4>
                 <div class="open-chat__header__description">
-                    <span>Go to Openchat Home</span>
+                    <span>오픈채팅 관리</span>
                     <i class="fas fa-chevron-right fa-xs"></i>
                 </div>
 
             </div>
             <div class="open-post">
                 <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtags">#bts#army</h6>
+                    <h5 class="open-post__title">그해 우리는</h5>
+                    <h6 class="open-post__hashtags">#그해우리는</h6>
                     <div class="open-post__members">
-                        <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
+                        <img src="https://w.namu.la/s/09bf37a3c949fe898822d40be50fbdec177fe2ebb4cdd89fbb3e083abbf74f93ed83faf8d593dcd69600f2de55d24aa065245134d66d1d5ffa7b4091dc5aefd8c28250fecedd41fe876bbd0739c26664be22e8f6340b0806c248d96166d886c5ef283949a623704318ae6875b4d38626">
                         <span class="open-post__member-count">802 members</span>
                         <div class="divider"></div>
-                        <span class="open-post__member-status">Active</span>
+                        <span class="open-post__member-status">활동중</span>
                     </div>
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
+                        <img src="https://th.bing.com/th/id/OIP.VzyCbUkhdUySlL9z4P7HFAHaHa?pid=ImgDet&rs=1">
                         <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
     </nav>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
 
