--- a/friends.html
+++ b/friends.html
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -43,26 +43,6 @@
                 </div>
             </div>
             <div class="user-component__column"></div>
-        </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__header">
-                <span>채널</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://t1.kakaocdn.net/kakaocorp/kakaocorp/admin/64d0623a017800001.png" class="user-component__avater user-component__avatar--sm" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">채널</h4>
-                    </div>
-                </div>
-                <div class="user-component__column">
-                </div>
-                <div>
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-sm"></i>
-                </div>
-            </div>
         </div>
         <div class="friends-screen__friend">
             <div class="friends-screen__header">
@@ -146,7 +126,7 @@
     </div>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
 
