--- a/chats.html
+++ b/chats.html
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-screen">
-        <a href="chat/chat.html">
+        <a href="chat/chat1.html">
             <div class="user-component user-component__chat">
                 <div class="user-component__column">
                     <img src="https://cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/5D6JBSIPEDB7UAC7NH2G3AZJ34.png" class="user-component__avater user-component__avatar" />
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </a>
-        <a href="chat/chat.html">
+        <a href="chat/chat2.html">
             <div class="user-component user-component__chat">
                 <div class="user-component__column">
                     <img src="https://post-phinf.pstatic.net/MjAyMTEyMjdfMTA5/MDAxNjQwNTg4Njk0NDQ5.jL13xTIj_PBWpFSkXcj68x8tTxc7vtQ0rPcx5Ksx-VEg.pG60SOLqk65omGgiibzNFZkQ1QcPrpuBAttd1yD7VZkg.JPEG/%EC%95%88%EB%8F%99%EA%B5%AC%EC%9D%80%ED%98%B8%E2%99%A5_%281%29.jpg?type=w1200"
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </a>
-        <a href="chat/chat.html">
+        <a href="chat/chat3.html">
             <div class="user-component user-component__chat">
                 <div class="user-component__column">
                     <img src="https://static.inews24.com/v1/1f4df6ab17fbf2.jpg" class="user-component__avater user-component__avatar" />
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </a>
-        <a href="chat/chat.html">
+        <a href="chat/chat4.html">
             <div class="user-component user-component__chat">
                 <div class="user-component__column">
                     <img src="https://blog.kakaocdn.net/dn/diS6w3/btro9G4j2Aq/ZAos9vdH53kS63IUVjnrX1/img.jpg" class="user-component__avater user-component__avatar" />
@@ -135,7 +135,7 @@
     </nav>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
 
