--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KoKoa Clone</title>
+    <title>코코아톡에 오신걸 환영합니다!</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -25,9 +25,9 @@
     </div>
 
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to KoKoa Clone</h1>
+        <h1 class="welcome-header__title">코코아톡에 오신걸 환영합니다</h1>
         <p class="welcome-header__text">
-            If you have a KoKoa Account, log in with your email and phone number.
+            코코아톡 계정이 있으시면, 전화번호나 이메일로 로그인해주세요
         </p>
     </header>
 
@@ -35,11 +35,11 @@
         <input name="username" type="text" placeholder="Email of phone number" />
         <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In" />
-        <a href="#">Find Kokoa Account or Password</a>
+        <a href="#">아이디/비밀번호 찾기</a>
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
 
