--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>22:43</span>
         </div>
         <div class="status-bar__column">
             <span>80%</span>
@@ -41,23 +41,23 @@
             <li class="settings__setting">
                 <div class="settings__setting-column">
                     <i class="fas fa-bullhorn"></i>
-                    <span>Notice</span>
+                    <span>공지사항</span>
                 </div>
                 <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
                 <div class="settings__setting-column">
                     <i class="fas fa-flask"></i>
-                    <span>KoKoa Lab</span>
+                    <span>실험실</span>
                 </div>
                 <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
                 <div class="settings__setting-column">
                     <i class="fas fa-info-circle"></i>
-                    <span>Version</span>
+                    <span>버전</span>
                 </div>
-                <div class="settings__setting-column">Latest Version</div>
+                <div class="settings__setting-column">그해 우리는</div>
             </li>
         </ul>
     </main>
@@ -91,7 +91,7 @@
     </nav>
 
     <div id="no-mobile">
-        <span>Your screen is too big :(</span>
+        <span>화면 창 가로를 줄여주세요...!</span>
     </div>
 
 
