--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-        <input name="username" type="text" placeholder="Email of phone number" />
-        <input name="password" type="password" placeholder="Password" />
-        <input type="submit" value="Log In" />
+        <input name="username" type="text" placeholder="이메일 또는 전화번호" />
+        <input name="password" type="password" placeholder="비밀번호" />
+        <input type="submit" value="로그인" />
         <a href="#">아이디/비밀번호 찾기</a>
     </form>
 
